--- a/index.html
+++ b/index.html
@@ -1,13 +1,49 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link src="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link src="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
     <title>JS Flashcards</title>
   </head>
   <body>
+    <h1>Flashcards</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="well">
+            <p class="front">JavaScript (JS)</p>
+            <p class="back">This is coding language</p>
+          </div>
+          <div class="well">
+            <p class="front">Operators</p>
+            <p class="back">definition of operaters</p>
+          </div>
+          <li>Variables</li>
+          <li>Variable naming conventions</li>
+          <li>Functions</li>
+          <li>Methods</li>
+          <li>Arguements</li>
+          <li>Parameters</li>
+          <li>Return</li>
+        </div>
+        <div class="col-md-6">
+          <ol>
+            <li>Chaining methods</li>
+            <li>Strings</li>
+            <li>Booleans</li>
+            <li>Undefined</li>
+            <li>NaN</li>
+            <li>Escape</li>
+            <li>Alert</li>
+            <li>Comments</li>
+            <li>jQuery</li>
+            <li>Attributes</li>
+          </ol>
+        </div>
+      </div>
+    </div>
 
   </body>
 </html>
