display column 1 with correct definitions.

--- a/index.html
+++ b/index.html
@@ -8,25 +8,55 @@
     <title>JS Flashcards</title>
   </head>
   <body>
-    <h1>Flashcards</h1>
+    <h1 class="jumbotron">Flashcards</h1>
     <div class="container">
       <div class="row">
         <div class="col-md-6">
           <div class="well">
             <p class="front">JavaScript (JS)</p>
-            <p class="back">This is coding language</p>
+            <p class="back">an object-oriented computer programming language commonly used to create interactive effects within web browsers.</p>
           </div>
           <div class="well">
             <p class="front">Operators</p>
-            <p class="back">definition of operaters</p>
+            <p class="back">JavaScript operators are used to assign values, compare values, perform arithmetic operations, and more. ex: +, -, %, +=</p>
           </div>
-          <li>Variables</li>
-          <li>Variable naming conventions</li>
-          <li>Functions</li>
-          <li>Methods</li>
-          <li>Arguements</li>
-          <li>Parameters</li>
-          <li>Return</li>
+          <div class="well">
+            <p class="front">Variables</p>
+            <p class="back">JavaScript variables are containers for storing data values. In this example, x is a variable:
+            <p class="back">var x = 5</p>
+          </div>
+          <div class="well">
+            <p class="front">Variable Naming Conventions</p>
+            <p class="back">use common sense camelCase for identifier names (variables and functions). ex: variableName, camelCase.
+          </div>
+          <div class="well">
+            <p class="front">Functions</p>
+            <p class="back">A JavaScript function is a block of code designed to perform a particular task. A JavaScript function is executed when "something" invokes it (calls it). A JavaScript function is defined with the function keyword, followed by a name, followed by parentheses (). Function names can contain letters, digits, underscores, and dollar signs (same rules as variables). The parentheses may include parameter names separated by commas:(parameter1, parameter2, ...) The code to be executed, by the function, is placed inside curly brackets: {}. ex:</p>
+            <p class="back">function myFunction (p1, p2) {return p1 * p2;}</p>
+          </div>
+          <div class="well">
+            <p class="front">Methods</p>
+            <p class="back">JavaScript methods are actions that can be performed on objects. A JavaScript method is a property containing a function definition. You access an object method with the following syntax:</p>
+            <p class="back">objectName.methodName()</p>
+          </div>
+          <div class="well">
+            <p class="front">Parameters</p>
+            <p class="back">Function parameters are the names listed in the function definition. In this example, number1 and number2 are parameters:</p>
+            <p class="back">function myFunction(number1, number2) {code to be executed};</p>
+            <p class="back">myFunction(3, 5);</p>
+          </div>
+          <div class="well">
+            <p class="front">Arguments</p>
+            <p class="back">Function arguments are the real values passed to (and received by) the function. In this example, 3 and 5 are the argument:</p>
+            <p class="back">function myFunction(number1, number2) {code to be executed};</p>
+            <p class="back">myFunction(3, 5);</p>
+          </div>
+          <div class="well">
+            <p class="front">Return</p>
+            <p class="back">The return statement stops the execution of a function and returns a value from that function. ex:</p>
+            <p class="back">function myFunction() {</p>
+            <p class="back">  return value;}</p>
+          </div>
         </div>
         <div class="col-md-6">
           <ol>
