both columns updated, with several design elements added.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>JS Flashcards</title>
   </head>
   <body>
-    <h1 class="jumbotron">Flashcards</h1>
     <div class="container">
+      <h1 class="jumbotron">JavaScript Flashcards</h1>
       <div class="row">
         <div class="col-md-6">
           <div class="well">
@@ -57,20 +57,90 @@
             <p class="back">function myFunction() {</p>
             <p class="back">  return value;}</p>
           </div>
+          <div class="well">
+            <p class="front">Chaining methods</p>
+            <div class="back">
+              <p>Until now we have been writing jQuery statements one at a time (one after the other). However, there is a technique called chaining, that allows us to run multiple jQuery commands, one after the other, on the same element(s).Tip: This way, browsers do not have to find the same element(s) more than once. To chain an action, you simply append the action to the previous action. The following example chains together the css(), slideUp(), and slideDown() methods. The "p1" element first changes to red, then it slides up, and then it slides down:</p>
+              <p>Example: $("#p1").css("color", "red").slideUp(2000).slideDown(2000); </p>
+            </div>
+          </div>
         </div>
         <div class="col-md-6">
-          <ol>
-            <li>Chaining methods</li>
-            <li>Strings</li>
-            <li>Booleans</li>
-            <li>Undefined</li>
-            <li>NaN</li>
-            <li>Escape</li>
-            <li>Alert</li>
-            <li>Comments</li>
-            <li>jQuery</li>
-            <li>Attributes</li>
-          </ol>
+          <div class="well">
+            <p class="front">Strings</p>
+            <div class="back">
+              <p>JavaScript strings are used for storing and manipulating text.</p>
+              <p>A JavaScript string is zero or more characters written inside quotes.</p>
+              <p>var carname = "Volvo XC60";  // Double quotes or var carname = 'Volvo XC60';  // Single quotes</p>
+            </div>
+          </div>
+          <div class="well">
+            <p class="front">Booleans</p>
+            <div class="back">
+              <p>A JavaScript Boolean represents one of two values: true or false.</p>
+              <p>Example: $("#p1").css("color", "red").slideUp(2000).slideDown(2000); </p>
+            </div>
+          </div>
+          <div class="well">
+            <p class="front">Chaining methods</p>
+            <div class="back">
+              <p>Until now we have been writing jQuery statements one at a time (one after the other). However, there is a technique called chaining, that allows us to run multiple jQuery commands, one after the other, on the same element(s).Tip: This way, browsers do not have to find the same element(s) more than once. To chain an action, you simply append the action to the previous action. The following example chains together the css(), slideUp(), and slideDown() methods. The "p1" element first changes to red, then it slides up, and then it slides down:</p>
+              <p>Boolean(10 > 9)        // returns true</p>
+            </div>
+          </div>
+          <div class="well">
+            <p class="front">Undefined</p>
+            <div class="back">
+              <p>The undefined property indicates that a variable has not been assigned a value.</p>
+            </div>
+          </div>
+          <div class="well">
+            <p class="front">NaN</p>
+            <div class="back">
+              <p>The NaN property represents "Not-a-Number" value. This property indicates that a value is not a legal number.</p>
+            </div>
+          </div>
+          <div class="well">
+            <p class="front">Escape</p>
+            <div class="back">
+              <p>This function makes a string portable, so it can be transmitted across any network to any computer that supports ASCII characters.</p>
+              <p>Example: escape(string) but is not longer used. Instead use encodeURI()</p>
+            </div>
+          </div>
+          <div class="well">
+            <p class="front">Alert</p>
+            <div class="back">
+              <p>The alert() method displays an alert box with a specified message and an OK button.</p>
+              <p>An alert box is often used if you want to make sure information comes through to the user.</p>
+              <p>alert("Hello! I am an alert box!")</p>
+            </div>
+          </div>
+          <div class="well">
+            <p class="front">Comments</p>
+            <div class="back">
+              <p>To write without affecting code</p>
+              <p>Single line comments start with // </p>
+            </div>
+          </div>
+          <div class="well">
+            <p class="front">jQuery</p>
+            <div class="back">
+              <p>jQuery is a lightweight, "write less, do more", JavaScript library.</p>
+              <p>The purpose of jQuery is to make it much easier to use JavaScript on your website.</p>
+            </div>
+          </div>
+          <div class="well">
+            <p class="front">Attributes</p>
+            <div class="back">
+              <p>Attributes provide additional information about HTML elements.</p>
+              <ul>
+                <li>All HTML elements can have attributes</li>
+                <li>Attributes provide additional information about an element</li>
+                <li>Attributes are always specified in the start tag</li>
+                <li>Attributes usually come in name/value pairs like: name="value"</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </div>
